Time Tracker Developer Org/src/objects/Timesheet_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case Creation</fullName>
                </value>
                <value>
                    <fullName>Case Cancel</fullName>
                </value>
                <value>
                    <fullName>Case Review</fullName>
                </value>
                <value>
                    <fullName>Case Documentation</fullName>
                </value>
                <value>
                    <fullName>Cancelled Documentation</fullName>
                </value>
                <value>
                    <fullName>Article Creation</fullName>
                </value>
                <value>
                    <fullName>Article Cancellation</fullName>
                </value>
                <value>
                    <fullName>Article Maintenance</fullName>
                </value>
                <value>
                    <fullName>Article Attachment</fullName>
                </value>
                <value>
                    <fullName>Case Closure</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Case Assignment</fullName>
                </value>
                <value>
                    <fullName>Queue Monitoring</fullName>
                </value>
                <value>
                    <fullName>Customer Escalations</fullName>
                </value>
                <value>
                    <fullName>Time Tracking</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Task Creation</fullName>
                </value>
                <value>
                    <fullName>Customer Chat</fullName>
                </value>
                <value>
                    <fullName>Chat Supervisor</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>Point of Escalation</fullName>
                </value>
                <value>
                    <fullName>Training - Consuming</fullName>
                </value>
                <value>
                    <fullName>Training - Delivering</fullName>
                </value>
                <value>
                    <fullName>Project Work</fullName>
                </value>
                <value>
                    <fullName>Work Stoppage</fullName>
                </value>
                <value>
                    <fullName>Break</fullName>
                </value>
                <value>
                    <fullName>Out of Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Day_of_Week__c</fullName>
        <formula>MOD( Activity_Date__c - DATE(1900, 1, 6), 7)</formula>
        <label>Day of Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Hours__c</fullName>
        <formula>Duration__c / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>VALUE(LEFT(Time_Spent__c, 2)) * 3600 +

VALUE(

LEFT(
RIGHT(Time_Spent__c,
           LEN(Time_Spent__c) - FIND(&apos;:&apos;, Time_Spent__c)),
   FIND(&apos;:&apos;, 
      RIGHT(Time_Spent__c,
           LEN(Time_Spent__c) - FIND(&apos;:&apos;, Time_Spent__c)
           )
       )
   - 1
    )
) * 60 +

VALUE(RIGHT(Time_Spent__c, 2))</formula>
        <inlineHelpText>@00:00</inlineHelpText>
        <label>Duration (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <defaultValue>&apos;00:00:00&apos;</defaultValue>
        <label>Time Spent (HH:MM:SS)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timesheet__c</fullName>
        <label>Timesheet</label>
        <referenceTo>Timesheet__c</referenceTo>
        <relationshipLabel>Timesheet Entries</relationshipLabel>
        <relationshipName>Timesheet_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Tracked_Duration_Hours__c</fullName>
        <formula>(Tracked_Duration__c/3600)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tracked Duration (Hours)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracked_Duration__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tracked Duration (Seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_TimesheetEntry_Identifier__c</fullName>
        <label>Unique TimesheetEntry Identifier</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isUtilized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Utilized</label>
        <type>Checkbox</type>
    </fields>
    <label>Timesheet Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activity__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>Time_Spent__c</columns>
        <columns>Comment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Today_s_Entries</fullName>
        <columns>NAME</columns>
        <columns>Activity_Date__c</columns>
        <columns>Activity__c</columns>
        <columns>Time_Spent__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Entries</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TE-{0}</displayFormat>
        <label>Timesheet Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>